--- a/sass/index.html
+++ b/sass/index.html
@@ -6,26 +6,43 @@
       <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge,chrome=1"/>
       <meta charset="utf-8">
       <title>
-        sass学习
+        sass demo
       </title>
       <link rel="icon" href="../favicon.ico" type="image/x-icon" />
       <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
       <link rel="stylesheet" type="text/css" href="demoCssFolder/demo.css" />
     </head>
     
-    <body>
-      <h2>sass学习</h2>
+    <body class="pl20">
+      <h2 class="text_center">sass demo</h2>
 
-      <h3>sass 7大特性<h3>
+      <h3>sass 7大特性(以下列表样式包括：变量、嵌套、导入)<h3>
       <!-- 变量、嵌套、导入、mixin（函数）、继承、运算、颜色 -->
       <ol class="sass_features">
         <li>变量</li>
-        <li>嵌套</li>
+        <li>嵌套(挺好用的)</li>
         <li class="key_point">导入(样式模块化开发， 实用！)</li>
         <li>mixin（函数）</li>
         <li>继承</li>
         <li>运算</li>
         <li>颜色</li>
       </ol>
+
+      <h3>mixin demo<h3>
+      <div class="box_block">木有使用 border-box; 宽高会被 boder 和 padding撑大</div>
+      <div class="box_block border_box">使用 border-box; 宽高不会变化</div>
+
+      <h3>扩展/继承 demo</h3>
+      <div class="success">成功！</div>
+      <div class="error">错误！</div>
+      <div class="warning">警告！</div>
+
+      <h3>运算</h3>
+      <div class="article">运算的宽度</div>
+
+      </br>
+      <h3>颜色</h3>
+      <a class="xq_link">这个是颜色的demo, 感觉用处不大！</a>
     </body>
 </html>
+
