--- a/vue/vueDemo.html
+++ b/vue/vueDemo.html
@@ -16,12 +16,8 @@
         .expand-transition { transition: all .3s ease; height: 30px; padding: 10px; background-color: #eee; overflow: hidden; }
         .expand-enter, .expand-leave { height: 0; padding: 0 10px; opacity: 0; }
         /*动画效果*/
-        .bounce-enter {
-          animation: bounce-in .5s;
-        }
-        .bounce-leave {
-          animation: bounce-out .5s;
-        }
+        .bounce-enter { animation: bounce-in .5s; }
+        .bounce-leave { animation: bounce-out .5s; }
         @keyframes bounce-in {
           0% {
             transform: scale(0);
