自动化部署小改动

--- a/gitDeploy/index.html
+++ b/gitDeploy/index.html
@@ -7,8 +7,8 @@
       <title>
         gitDeploy Demo
       </title>
-      <link rel="icon" href="http://xq.56.com/favicon.ico" type="image/x-icon" />
-      <link rel="shortcut icon" href="http://xq.56.com/favicon.ico" type="image/x-icon" />
+      <link rel="icon" href="http://wteam-xq.com/favicon.ico" type="image/x-icon" />
+      <link rel="shortcut icon" href="hhttp://wteam-xq.com/favicon.ico" type="image/x-icon" />
       <link rel="stylesheet" href="./git_deploy.css" type="text/css" />
       <script type="text/javascript" src="./git_deploy.js"></script>
     </head>
@@ -22,7 +22,7 @@
         <h5>千帆直播 看不一样的我</h5>
         <h5 class="final_txt" id="final_txt">千帆直播 邂逅最美的我</h5>
         <h5>千帆直播 *****</h5>
-        <h5 id="txt_count_down">文本变化计时器：<span class="font_red">20</span></h5>
+        <h5 id="txt_count_down">计时器：<span class="font_red">20</span></h5>
       </div>
 
     </body>
