--- a/flashDemo/sendStar.html
+++ b/flashDemo/sendStar.html
@@ -13,7 +13,6 @@
 		<link rel="icon" href="../favicon.ico" type="image/x-icon" />
       	<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
       	<script>
-      		window.hideFlash = hideFlash;
 
 	        // 全局被调用函数
       	 	window.onload = function(){
@@ -21,19 +20,18 @@
       	 		// 先不做IE兼容
       	 		triggerBtn.onclick = showFlash;
       	 	}
-      	 	function showFlash() {
+      	 	window.showFlash = function() {
       	 		var flashWrap = document.getElementById('flashContent');
       	 		flashWrap.innerHTML = '<object id="sendStar" width="100%" height="100%" type="application/x-shockwave-flash"><param name="movie" value="sendStar.swf"><param name="allowScriptAccess" value="always"><param name="wmode" value="transparent"></object>';
       	 		flashWrap.style.height = '550px';
       	 		flashWrap.style.width = '500px';
       	 		flashWrap.style.visibility = 'visible';
       	 	}
-      	 	function hideFlash() {
+      	 	window.hideFlash = function() {
               	var flashWrap = document.getElementById('flashContent');
               	flashWrap.style.height = '0px';
       	 		flashWrap.style.width = '0px';
       	 		flashWrap.style.visibility = 'hidden';
-      	 		console.log('调用成功！');
             }
         </script>
 	</head>
