完成gulp css sprite小demo

--- a/sass/gulp-sass/index.html
+++ b/sass/gulp-sass/index.html
@@ -9,8 +9,9 @@
       </title>
       <link rel="icon" href="../../favicon.ico" type="image/x-icon" />
       <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon" />
+      <link rel="stylesheet" type="text/css" href="css/index.css" />
     </head>
-    <body> 
+    <body>
       <div class="ps_demo_wrap">
         <div class="demo_icon weibo_icon"><div class="black_bg"></div></div>
         <div class="demo_icon qq_icon"><div class="black_bg"></div></div>
