--- a/challenge_case/index.html
+++ b/challenge_case/index.html
@@ -45,6 +45,15 @@
               <li><a href="selectModel.html" target="_blank">selectModel.html</a></li>
             </ul>
           </li>
+
+          <li>
+            <p>5.canvas实现飘落效果：</p>
+            <ul>
+              <li><a href="canvas_falling.html" target="_blank">参考demo</a></li>
+              <li><a href="canvas_falling_2.html" target="_blank">个人demo</a></li>
+            </ul>
+          </li>
+
         </ul>
       </div>
 
