--- a/cssCommonDemo.html
+++ b/cssCommonDemo.html
@@ -321,9 +321,10 @@
           // 头像点击事件
           popUserInfo();
           try {
-            // 更新了新动画样式， 也会触发
+            // 更新了新动画样式， 也会触发;
             // 在动画执行过程中（没执行完） 更改了动画样式， 新样式动画播放完才触发；
-            // 动画执行完毕会回复原来样式， 所以可以在结束时 添加跟动画结束时样式一样的类。
+            // 动画执行完毕会回复原来样式， 所以可以在结束时 添加跟动画结束时样式一样的类;
+            // IE10+ 才支持该方法.
             moveElement.addEventListener('animationend', function(){
                 console.log('CSS3 动画完成！');
             });
